<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:keepScreenOn="true" >


    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <View
            android:background="@color/grey_400"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <RelativeLayout
        android:id="@+id/play"
        android:layout_below="@+id/shimmer_view_container"
        android:background="@color/black"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:focusable="true">


        <FrameLayout
            android:id="@+id/player_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/video_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <com.google.android.exoplayer2.ui.SubtitleView
                android:id="@+id/subtitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <ImageView
                android:id="@+id/img_subtitle"
                android:src="@drawable/ic_subtitle"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="42dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="50dp" />

        </FrameLayout>
        <WebView
            android:id="@+id/webView"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <ImageView
            android:id="@+id/img_full_scr"
            android:src="@drawable/ic_full"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="35dp"
            android:layout_alignParentEnd="true"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="10dp" />
        <ImageView
            android:id="@+id/img_back"
            android:paddingTop="10dp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/ic_action_back_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_outline_play_circle_filled_24px"
            android:layout_width="50dp"
            android:layout_height="50dp" />


    </RelativeLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_layout"
        android:layout_below="@+id/play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.core.widget.NestedScrollView

            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:id="@+id/llbottomparent"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_server_list"
                        android:layout_width="match_parent"
                        android:nestedScrollingEnabled="false"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>


                    <LinearLayout
                        android:id="@+id/download_text"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="vertical"
                        android:background="@color/colorPrimary"
                        android:visibility="gone"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="4dp"
                            android:layout_marginLeft="5dp"
                            android:text="Download Links:"
                            android:textSize="15dp"
                            android:textColor="@android:color/white"
                            />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_download_list"
                        android:layout_width="match_parent"
                        android:nestedScrollingEnabled="false"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>

                    <RelativeLayout
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/text_name"
                            android:layout_toLeftOf="@+id/add_fav"
                            android:textAppearance="@style/TextAppearance.Title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_toStartOf="@+id/add_fav" />

                        <ImageView
                            android:id="@+id/add_fav"
                            android:visibility="gone"
                            android:layout_alignParentRight="true"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:layout_marginStart="5dp"
                            android:layout_marginLeft="10dp"
                            android:clickable="true"
                            android:focusable="true"
                            android:src="@drawable/outline_favorite_border_24"
                            android:layout_alignParentEnd="true" />

                    </RelativeLayout>

                    <LinearLayout
                        android:id="@+id/llbottom"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="10dp"
                        android:visibility="gone">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/genre"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:textColor="@color/white_54" />

                            <TextView
                                android:id="@+id/tv_genre"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.Small"
                                android:textColor="@color/white" />


                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/cast_n_crew"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:textColor="@color/white_54" />

                            <TextView
                                android:id="@+id/tv_cast"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.Small"
                                android:textColor="@color/white" />
                        </LinearLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp">

                            <TextView
                                android:id="@+id/director"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/director"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:textColor="@color/white_54" />

                            <TextView
                                android:id="@+id/tv_director"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="10dp"
                                android:layout_marginLeft="10dp"
                                android:layout_toEndOf="@id/director"
                                android:layout_toRightOf="@id/director"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:textColor="@color/white" />

                            <androidx.recyclerview.widget.RecyclerView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/director"
                                android:layout_toRightOf="@id/director"
                                android:visibility="gone">

                            </androidx.recyclerview.widget.RecyclerView>

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp">

                            <TextView
                                android:id="@+id/tv_release_date"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.Medium.Bold"
                                android:textColor="@color/white_54" />

                        </RelativeLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:background="@color/grey_20" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_marginTop="5dp"
                            android:background="@color/grey_20" />


                    </LinearLayout>
                    <View
                        android:layout_marginTop="5dp"
                        android:background="@color/grey_20"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="vertical"
                        android:padding="10dp"
                        tools:visibility="gone">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textAppearance="@style/TextAppearance.Medium.Bold"
                            android:textColor="@color/white_54" />

                        <TextView
                            android:id="@+id/tv_details"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textAppearance="@style/TextAppearance.Small"
                            android:textColor="@color/white" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_related"
                        android:textAppearance="@style/TextAppearance.Title"
                        android:textColor="@color/white"
                        android:padding="10dp"
                        android:text="@string/related_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_related"
                        android:layout_width="match_parent"
                        android:layout_marginBottom="10dp"
                        android:layout_height="wrap_content">

                    </androidx.recyclerview.widget.RecyclerView>
                </LinearLayout>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</RelativeLayout>